# aria_robot-obstacle-avoidance-with-kinect-v2

./: CMakeLists.txt  CMakeLists.txt~  a.out  all_in_main.pro  all_in_main.pro.user.3.2-pre1  camera.txt  global.h  kinect.cpp  kinect.h  main.cpp  params.txt  params.txt~  pioneer.cpp  pioneer.h  readme  slam.cpp  slam.cpp~  slam.h  slam.h~  slampart.cpp~
